use incubator vector improve performance